--- a/project_starter/network.yml
+++ b/project_starter/network.yml
@@ -1,5 +1,9 @@
 Description: >
-   create VPC, internet gateway, sunet
+    Carlos Rivas / Udacity
+    This template deploys a VPC, with a pair of public and private subnets spread 
+    across two Availabilty Zones. It deploys an Internet Gateway, with a default 
+    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
+    and default routes for them in the private subnets.
 
 Parameters:
 
@@ -8,27 +12,27 @@ Parameters:
         Type: String
 
     VpcCIDR: 
-        Description: HostMin   10.0.0.1    HostMax   10.0.255.254
+        Description: Please enter the IP range (CIDR notation) for this VPC
         Type: String
         Default: 10.0.0.0/16
 
     PublicSubnet1CIDR:
-        Description: HostMin  10.0.0.1    HostMax 10.0.0.254
+        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
         Type: String
         Default: 10.0.0.0/24
 
     PublicSubnet2CIDR:
-        Description: HostMin  10.0.0.1    HostMax 10.0.0.254
+        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
         Type: String
         Default: 10.0.1.0/24
 
     PrivateSubnet1CIDR:
-        Description: HostMin  10.0.2.1    HostMax  10.0.2.254
+        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
         Type: String
         Default: 10.0.2.0/24
 
     PrivateSubnet2CIDR:
-        Description: HostMin  10.0.3.1  HostMax  10.0.3.254
+        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
         Type: String
         Default: 10.0.3.0/24
 
